# debezium-ai-python

./: CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  commit-signoff-check.yml  sanity-check.yml
examples/rag_chatbot/: README.md  chatbot.py  docker-compose.yml  setup_db.sql  stream_sync.py
pydebeziumai/: __init__.py
pydebeziumai/adapters/: __init__.py  base.py  chroma.py  milvus.py  pgvector.py
pydebeziumai/ingestion/: __init__.py  base.py  connect_handler.py  json_handler.py
pydebeziumai/models/: __init__.py  connect_message.py  datastructures.py  event.py  source_record.py
pydebeziumai/retrieval/: __init__.py  langgraph.py
pydebeziumai/sync/: __init__.py  manager.py
pydebeziumai/transformation/: __init__.py  document_builder.py  id_strategy.py  projection_policy.py  sanitizer.py
tests/: __init__.py  conftest.py
tests/integration/: test_chroma_pipeline.py  test_milvus_adapter.py
tests/unit/: __init__.py  test_document_builder.py  test_id_strategy.py  test_ingestion.py  test_models.py  test_pgvector_adapter.py  test_retrieval.py  test_sync_manager.py  test_version.py
tools/: setup_jars.py
