[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydebeziumai"
version = "0.1.0"
description = "Real-time CDC Integration for LangChain & LangGraph using Debezium"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Kodukulla Mohnish Mythreya", email = "kmohnishm@gmail.com" }]
keywords = ["debezium", "cdc", "langchain", "langgraph", "vector-store", "rag", "postgresql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "langchain-core>=0.2",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
chroma = [
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
]
pgvector = [
    "langchain-postgres>=0.0.9",
    "psycopg[binary]>=3.1",
]
milvus = [
    "langchain-milvus>=0.1",
]
local-embeddings = [
    "sentence-transformers>=3.0",
    "langchain-huggingface>=0.0.3",
]
openai = [
    "langchain-openai>=0.1",
]
langgraph = [
    "langgraph>=0.1",
]
debezium = [
    "pydbzengine>=3.2.0.0",
]
dev = [
    "pydebeziumai[chroma,local-embeddings,langgraph,debezium]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/debezium/debezium-ai-python"
Documentation = "https://github.com/debezium/debezium-ai-python"
Issues = "https://github.com/debezium/dbz/issues"

[tool.hatch.build.targets.wheel]
packages = ["pydebeziumai"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pydebeziumai"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pydebeziumai"]
omit = ["tests/*", "examples/*"]
